src/tests/ci/assignment_5_functions/invalid_semantic/33_missing_main.c
int helper() {
    return 1;
}